--- a/Springboard Data Science Career Track/27 - Capstone III/3 - Pre Processing/Capstone 3 - Dashboard View Projection - EDA + PreProcessing.ipynb
+++ b/Springboard Data Science Career Track/27 - Capstone III/3 - Pre Processing/Capstone 3 - Dashboard View Projection - EDA + PreProcessing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Capstone III - Data Wrangling + EDA\n",
+    "# Capstone III - Data Wrangling + EDA + PreProcessing\n",
     "## Data taken from CSV from export of User Utility Database"
    ]
   },
